# nlp

./: .gitignore  README.md  fine-tuning.ipynb  pyproject.toml  template.env
1_insight_summary/: .gitignore  compute_sentiment_score.py  main.ipynb
20_research_dept_labeling/: README.md  main.ipynb
20_research_dept_labeling/data/: .gitkeep
BERT/: language_model.ipynb  tokenizer.ipynb
bam/: main.ipynb
category_classification/: .gitignore  create_dataset.ipynb  dataset.ipynb  dataset_loader.py  eval.ipynb  fine-tuning.ipynb  pyproject.toml  template.env
category_classification/data/: 09251300.json  09251400.json  09281400.csv  20230926_ft.csv  VOC人手タグ付け.xlsx  comments.txt  gplist.csv  カテゴリー・タグ定義.csv
category_classification/data/fine-tuning/: eval.csv  test.csv  train.csv
category_classification/results/: fine-tuning_15epoch_001.html
datasets/origin/: categorize.csv  categorize_eng.csv
datasets/sentiment_classification/: dataset.csv  dataset.ipynb  dataset_loader.py  fine-tuning.ipynb  test.csv  train.csv  valid.csv
demo/: cluster_info.csv  main.ipynb  voc_data+[score, request, cluster, category].csv  voc_data+[score, request, cluster].csv  評価項目.xlsx
proper_noun_detection/: main.ipynb
request_detection/: .gitignore  create_dataset.ipynb  dataset_loader.py  fine-tuning.ipynb
request_detection/data/: eval.csv  test.csv  train.csv
request_detection/logs/: events.out.tfevents.1692454593.moxak.13342.0  events.out.tfevents.1692454657.moxak.13342.1  events.out.tfevents.1692570830.moxak.13342.2  events.out.tfevents.1692571079.moxak.13342.3  events.out.tfevents.1692571235.moxak.17997.0  events.out.tfevents.1692571375.moxak.18231.0
sentiment_classification/: .gitignore  create_dataset.ipynb  dataset.ipynb  dataset_loader.py  eval.ipynb  eval_computing_time.ipynb  fine-tuning.ipynb
(+1 files in other folders)
