[tool.poetry]
name = "category-classification"
version = "0.1.0"
description = ""
authors = ["Bunzo Akama"]
readme = "README.md"
packages = [{include = "category_classification"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
# transformers = {version = "4.33.2", extras = ["ja"]}
datasets = "^2.14.1"
ipykernel = "^6.25.1"
torch = ">=2.0.0, !=2.0.1"
# torch = {path = "torch-2.0.1+cu117-cp310-cp310-win_amd64.whl"}
accelerate = "^0.21.0"
fugashi = "^1.2.1"
unidic-lite = "^1.0.8"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
tensorboard = "^2.13.0"
tabulate = "^0.9.0"
japanize-matplotlib = "^1.1.3"
debugpy = "1.6.7"
sentencepiece = "^0.1.99"
openai = "^0.28.0"
rich = "^13.5.3"
python-dotenv = "^1.0.0"
langchain = "^0.0.300"
litellm = "^0.1.743"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
